--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,13 +69,13 @@
 .card {
   border: none;
   border-radius: 4px;
-  background-color: #fff;
+  background-color: #6A994E;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 
 .card:hover {
-  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 5px 30px rgba(15, 212, 15, 0.253);
 }
 
 .card-body {
@@ -89,7 +89,7 @@
 
 .main-content {
   width: 100%;
-  background: #f3f8fb;
+  background: #fefae0;
 }
 
 .main-content-inner {
@@ -108,8 +108,8 @@
   height: 100vh;
   width: 280px;
   overflow: hidden;
-  background: #303641;
-  box-shadow: 2px 0 32px rgba(0, 0, 0, 0.05);
+  background: #386641;
+  box-shadow: 2px 0 32px rgba(49, 80, 56, 0.13);
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
@@ -132,14 +132,14 @@
 }
 
 .slimScrollBar {
-  background: #fff !important;
+  background: #a7c957 !important;
   opacity: 0.1 !important;
 }
 
 .sidebar-header {
   padding: 19px 32px 20px;
-  background: #303641;
-  border-bottom: 1px solid #343e50;
+  background: #fefae0;
+  border-bottom: 1px solid #403233;
 }
 .sidebar-menu .logo {
   text-align: center;
@@ -155,8 +155,8 @@
 .metismenu li a {
   position: relative;
   display: block;
-  color: #8d97ad;
-  font-size: 15px;
+  color: #fefae0;
+  font-size: 18px;
   text-transform: capitalize;
   padding: 15px 15px;
   letter-spacing: 0;
@@ -164,7 +164,7 @@
 }
 
 .metismenu li a i {
-  color: #6a56a5;
+  color: #fefae0;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
@@ -175,7 +175,7 @@
   font-family: fontawesome;
   right: 15px;
   top: 12px;
-  color: #8d97ad;
+  color: #6A994E;
   font-size: 20px;
 }
 
@@ -193,7 +193,7 @@
 
 .metismenu li.active > a,
 .metismenu li:hover > a {
-  color: #fff;
+  color: #386641;
 }
 
 .metismenu li li a {
@@ -206,18 +206,18 @@
 
 .metismenu > li:hover > a,
 .metismenu > li.active > a {
-  color: #fff;
-  background: #343942;
+  color: #001A23;
+  background: #002308;
 }
 
 .metismenu li:hover > a,
 .metismenu li.active > a {
-  color: #fff;
+  color: #6A994E;
 }
 
 .metismenu li:hover > a i,
 .metismenu li.active > a i {
-  color: #fff;
+  color: #6A994E;
 }
 
 .metismenu li li a:after {
@@ -229,7 +229,7 @@
 /*-------------------- 2.1.1 Horizontal Menu -------------------*/
 
 .body-bg {
-  background: #f3f8fb;
+  background: #002308;
 }
 
 .horizontal-main-wrapper {
@@ -264,7 +264,7 @@
 }
 
 .mainheader-area .logo a span {
-  color: #843df9;
+  color: #002308;
 }
 
 .horizontal-menu {
@@ -280,13 +280,13 @@
   display: block;
   font-size: 13px;
   padding: 10px 20px;
-  color: #000000;
+  color: #002308;
   text-transform: capitalize;
 }
 
 .horizontal-menu ul li:hover > a,
 .horizontal-menu ul li.active > a {
-  color: #007bff;
+  color: #002308;
 }
 
 .horizontal-menu nav > ul > li:first-child > a {
@@ -303,7 +303,7 @@
   top: 100%;
   z-index: 99;
   width: 200px;
-  background: #fff;
+  background: #002308;
   opacity: 0;
   visibility: hidden;
   border-top: 4px solid #007bff;
@@ -393,8 +393,8 @@
 
 .header-area {
   padding: 15px 30px;
-  background: #fff;
-  border-bottom: 1px solid #d8e3e7;
+  background: #386641;
+  border-bottom: 1px solid #386641;
 }
 
 .nav-btn {
@@ -406,7 +406,7 @@
   display: block;
   width: 22px;
   height: 2px;
-  background: #b3aaaa;
+  background: #A7C957;
   margin: 4px 0;
   border-radius: 15px;
   -webkit-transition: all 0.3s ease 0s;
@@ -445,7 +445,7 @@
   padding-left: 20px;
   padding-right: 40px;
   letter-spacing: 0;
-  background: #f3eeff;
+  background: #A7C957;
 }
 
 .search-box input::-webkit-input-placeholder {
@@ -490,12 +490,12 @@
 }
 
 .notification-area li.settings-btn.active i {
-  color: #007bff;
+  color: #A7C957;
 }
 
 .notification-area li > i {
   font-size: 26px;
-  color: #bdbcbc;
+  color: #A7C957;
   vertical-align: middle;
   text-shadow: 0 0 8px rgba(0, 0, 0, 0.12);
   -webkit-transition: color 0.3s ease 0s;
@@ -514,7 +514,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 10px;
   font-weight: 600;
-  color: #fff;
+  color: #6A994E;
   background: var(--primary-color);
   height: 20px;
   width: 20px;
@@ -536,7 +536,7 @@
   background: var(--primary-color);
   display: block;
   padding: 18px 30px;
-  color: #fff;
+  color: #fefae0;
   font-size: 15px;
   letter-spacing: 0;
   overflow: hidden;
@@ -628,7 +628,7 @@
 .notify-text span.msg {
   display: block;
   font-size: 12px;
-  color: #4e4e4e;
+  color: #001A23;
   line-height: 22px;
   margin-bottom: 4px;
   font-weight: 400;
@@ -647,7 +647,7 @@
 
 .page-title-area {
   padding: 0 30px;
-  background: #fff;
+  background: #386641;
   position: relative;
 }
 
@@ -664,9 +664,9 @@
 }
 
 .page-title {
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 300;
-  color: #313b3d;
+  color: #fefae0;
   letter-spacing: 0;
   margin-right: 30px;
 }
@@ -682,9 +682,9 @@ ul.breadcrumbs {
 .breadcrumbs li a,
 .breadcrumbs li span {
   display: block;
-  font-size: 14px;
+  font-size: 17px;
   font-weight: 400;
-  color: #7801ff;
+  color: #A7C957;
   letter-spacing: 0;
   margin-right: 16px;
   position: relative;
@@ -692,7 +692,7 @@ ul.breadcrumbs {
 
 .breadcrumbs li a:before {
   content: "/";
-  color: #768387;
+  color: #fefae0;
   position: absolute;
   right: -13px;
   top: 0;
@@ -700,7 +700,7 @@ ul.breadcrumbs {
 
 .breadcrumbs li span {
   margin-right: 0;
-  color: #768387;
+  color: #fefae0;
   text-transform: capitalize;
 }
 
@@ -758,8 +758,8 @@ ul.breadcrumbs {
 
 .notification-area .dropdown-menu,
 .user-profile .dropdown-menu {
-  background: #fff;
-  border: none;
+  background: #6A994E;
+  border: #386641;
   -webkit-transform: none !important;
   transform: none !important;
   top: 130% !important;
@@ -787,7 +787,7 @@ ul.breadcrumbs {
 
 .user-profile .dropdown-menu a {
   font-size: 14px;
-  color: #8a8a8a;
+  color: #fefae0;
   letter-spacing: 0;
   font-weight: 500;
   padding: 4px 120px;
@@ -796,7 +796,7 @@ ul.breadcrumbs {
 
 .user-profile .dropdown-menu a:hover {
   background: #f8f9fa;
-  color: #2942fa;
+  color: #386641;
 }
 
 /*-------------------- END Page Title Area -------------------*/
@@ -1223,7 +1223,7 @@ table.dbkit-table tr td {
 }
 
 .pagination_area ul li a:hover {
-  background: #8553fa;
+  background: #386641;
   color: #fff;
 }
 
@@ -1897,7 +1897,7 @@ p.card-text {
 /*-------------------- 16. Pagination ------------------- */
 
 .pg-color-border li a {
-  border-color: #007bff;
+  border-color: #386641;
 }
 
 .pagination li a {
@@ -2106,7 +2106,7 @@ div.dataTables_wrapper div.dataTables_length select {
 /* datatable-primary */
 
 .datatable-primary thead {
-  background: #4336fb;
+  background: #2b4d3a;
   color: #fff;
 }
 
@@ -2132,25 +2132,25 @@ table.dataTable thead td {
 
 .datatable-primary .dataTables_paginate .page-item.active .page-link,
 .datatable-primary .dataTables_paginate .page-item .page-link:hover {
-  background-color: #4336fb;
-  border-color: #4336fb;
+  background-color: #386641;
+  border-color: #386641;
   color: #fff;
 }
 
 .datatable-primary .dataTables_paginate .page-link {
-  color: #4336fb;
-  border: 1px solid #4336fb;
+  color: #386641;
+  border: 1px solid #386641;
 }
 
 .datatable-primary .dataTables_paginate .paginate_button.disabled,
 .datatable-primary .dataTables_paginate .paginate_button.disabled:hover,
 .datatable-primary .dataTables_paginate .paginate_button.disabled:active {
-  color: #4336fb !important;
+  color: #386641 !important;
   border: none;
 }
 
 .datatable-primary .dataTables_paginate .page-item.disabled .page-link {
-  color: #9f98f7;
+  color: #001A23;
   background-color: #f9f9f9;
   border-color: #c9c6f5;
 }
@@ -2158,26 +2158,26 @@ table.dataTable thead td {
 /* datatable-dark */
 
 .datatable-dark thead {
-  background: #444;
-  color: #fff;
+  background: #6A994E;
+  color: #001A23;
 }
 
 .datatable-dark .dataTables_paginate .page-item.active .page-link,
 .datatable-dark .dataTables_paginate .page-item .page-link:hover {
-  background-color: #444;
-  border-color: #444;
-  color: #fff;
+  background-color: #386641;
+  border-color: #001A23;
+  color: #fefae0;
 }
 
 .datatable-dark .dataTables_paginate .page-link {
-  color: #444;
-  border: 1px solid #444;
+  color: #386641;
+  border: 1px solid #386641;
 }
 
 .datatable-dark .dataTables_paginate .paginate_button.disabled,
 .datatable-dark .dataTables_paginate .paginate_button.disabled:hover,
 .datatable-dark .dataTables_paginate .paginate_button.disabled:active {
-  color: #444 !important;
+  color: #386641 !important;
   border: none;
 }
 
@@ -2315,7 +2315,7 @@ table.dataTable thead td {
 
 .login-form-head {
   text-align: center;
-  background: #8655fc;
+  background: #386641;
   padding: 50px;
 }
 
@@ -2353,7 +2353,7 @@ table.dataTable thead td {
 
 .form-gp.focused label {
   top: -15px;
-  color: #7e74ff;
+  color: #386641;
 }
 
 .form-gp input {
@@ -2382,7 +2382,7 @@ table.dataTable thead td {
 .form-gp i {
   position: absolute;
   right: 5px;
-  color: #7e74ff;
+  color: #386641;
   font-size: 16px;
 }
 
