--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -715,7 +715,7 @@ ul.breadcrumbs {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   background: -webkit-linear-gradient(left, #8914fe 0%, #8063f5 100%);
-  background: linear-gradient(to right, #8914fe 0%, #8063f5 100%);
+  background: linear-gradient(to right, #ffc107 0%, #ffc107 100%);
   padding: 17px 38px;
   position: relative;
 }
