--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,7 +69,7 @@
 .card {
   border: none;
   border-radius: 4px;
-  background-color: #6A994E;
+  background-color: #ffffff;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
